--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -53,8 +53,13 @@
         <a class="footer-rss-wrap" href="/blog/feed" target="_blank" bw-static><span class="footer-rss icon-feed"></span></a>
         <div class="cont-wrap">
             <div class="grid_12">
-                <p>Copyright 2015 <a href="http://www.4321.io" target="_self">Amamiya Yuuko</a>, all rights reserved. 黑ICP备15005987号.</p>
-                <p>Powered by <a href="https://github.com/kagamine/YuukoBlog" target="_blank" yuuko-static>YuukoBlog</a>, a lightweight and super fast Node.js blog system. <% if (!req.session.admin) { %><a href="/admin/login" target="_self">Manage</a><% } %></p>
+                <div class="copyright">
+                    <p>Copyright © 2015 <a href="http://www.1234.sh" target="_self">Amamiya Yuuko</a>, all rights reserved. 黑ICP备15005987号.</p>
+                    <p>Powered by <a href="https://github.com/kagamine/YuukoBlog" target="_blank" yuuko-static>YuukoBlog</a>, a lightweight and super fast Node.js blog system. <% if (!req.session.admin) { %><a href="/admin/login" target="_self">Manage</a><% } %></p>
+                </div>
+                <div class="upyun">
+                    <a href="http://www.upyun.com/"><img src="/images/upyun.png" class="upyun-logo" alt="又拍云CDN" /></a>
+                </div>
             </div><div class="clear"></div>
         </div>
     </div>
