--- a/public/styles/yuuko.css
+++ b/public/styles/yuuko.css
@@ -1961,3 +1961,39 @@ td input[type="text"], td input[type="password"] {
 .post thead {
     background-color: #f8f8f8;
 }
+
+.copyright {
+    width: 80%;
+    float: left;
+    text-align: left;
+}
+
+.upyun {
+    width: 20%;
+    float: right;
+    text-align: right;
+}
+
+.upyun-logo {
+    height: 75px;
+    margin-top: 4px;
+}
+
+@media (max-width:775px) {
+    .copyright {
+        float: none;
+        text-align: center;
+        width: 100%;
+    }
+
+    .upyun {
+        float: none;
+        text-align: center;
+        width: 100%;
+    }
+
+    .upyun-logo {
+        height: 60px;
+        margin-top: 0;
+    }
+}
